--- a/read-teamlab/dockerfiles/Dockerfile.target
+++ b/read-teamlab/dockerfiles/Dockerfile.target
@@ -1,7 +1,9 @@
 FROM php:apache
 
-# Installiere OpenSSH-Server
-RUN apt-get update && apt-get install -y openssh-server && apt-get clean
+# Installiere OpenSSH-Server und OpenSSL
+RUN apt-get update && \
+    apt-get install -y openssh-server openssl && \
+    apt-get clean
 
 # Konfiguriere SSH-Verzeichnis
 RUN mkdir /var/run/sshd
@@ -11,25 +13,25 @@ RUN useradd -m -s /bin/bash admin && \
     echo "admin:password" | chpasswd
 
 # Aktiviere Passwort-Authentifizierung in SSH
-RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config
-RUN sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
+RUN sed -i 's/#PermitRootLogin prohibit-password/PermitRootLogin yes/' /etc/ssh/sshd_config && \
+    sed -i 's/#PasswordAuthentication yes/PasswordAuthentication yes/' /etc/ssh/sshd_config
 
-# Konfiguriere Apache
+# Setze eine einfache Index-Datei
 RUN echo "Hello from SSH-Target on Port 80" > /var/www/html/index.html
 
-# Erstelle ein selbstsigniertes Zertifikat für HTTPS
-RUN apt-get install -y openssl && \
-    mkdir -p /etc/ssl/certs /etc/ssl/private && \
+# Erstelle selbstsigniertes SSL-Zertifikat
+RUN mkdir -p /etc/ssl/certs /etc/ssl/private && \
     openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
     -keyout /etc/ssl/private/apache.key \
     -out /etc/ssl/certs/apache.crt \
     -subj "/C=US/ST=State/L=City/O=Org/CN=ssh-target"
 
-# Aktiviere SSL-Modul und Konfiguriere HTTPS
-RUN a2enmod ssl
-RUN a2ensite default-ssl
-COPY apache-ssl.conf /etc/apache2/sites-available/000-default.conf
-RUN a2dissite 000-default  # Deaktiviere die Standardkonfiguration, um Konflikte zu vermeiden
+# Apache SSL aktivieren und eigene Konfiguration einbinden
+RUN a2enmod ssl && \
+    a2ensite default-ssl && \
+    rm /etc/apache2/sites-enabled/default-ssl.conf
+
+COPY apache-ssl.conf /etc/apache2/sites-enabled/default-ssl.conf
 
 # Starte SSH und Apache
 CMD service ssh start && apache2ctl -D FOREGROUND
